# nKenKen

./: CMakeLists.txt  ExampleLevel.ken.tns  README.md  nKenKen.sln
src/: CMakeLists.txt  Config.c  Config.h  EquationHinter.c  EquationHinter.h  Font.c  Game.c  Game.h  Help.c  Levels.c  Levels.h  MainMenu.c  MainMenu.h  Makefile  MenuGraphic.h  MenuItem.h  Metrics.c  Metrics.h  Options.c  Piece.c  Piece.h  Replacements.c  Replacements.h  Selector.c  Selector.h  Startup.c  main.c  nKenKen.vcxproj  nKenKen.vcxproj.filters
src/ArchiveLib/: ArchiveEntry.c  CMakeLists.txt
src/KenKenLib/: CMakeLists.txt  KenKenLib.c  KenKenLib.vcxproj  KenKenLib.vcxproj.filters  Makefile
src/Tests/: TestKenKenLib.c  Tests.c
src/include/KenKenLib/: KenKenLib.h
